@@ -6,7 +6,6 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -23,10 +22,10 @@ public class UserService implements IUserService {
     @Override
     public User registerUser(RegistrationRequest registrationRequest) {
         User user = new User(registrationRequest.getFirstName(),
-                            registrationRequest.getLastName(),
-                            registrationRequest.getEmail(),
-                            passwordEncoder.encode(registrationRequest.getPassword()),
-                            Arrays.asList(new Role("ROLE_USER"))
+                registrationRequest.getLastName(),
+                registrationRequest.getEmail(),
+                passwordEncoder.encode(registrationRequest.getPassword()),
+                List.of(new Role("ROLE_USER"))
         );
         return userRepository.save(user);
     }
